2013-01-13  Mike Frysinger  <vapier@gentoo.org>

	* manual/pattern.texi (Flags for Globbing): Move GLOB_NOSORT after
	GLOB_NOESCAPE.

2013-01-13  Mike Frysinger  <vapier@gentoo.org>

	* manual/pattern.texi (Flags for Globbing): Highlight GNU extensions.

2013-01-13  Mike Frysinger  <vapier@gentoo.org>

	* manual/pattern.texi (glob_t): Document gl_flags.
	(glob64_t): Likewise.

2013-01-11  David S. Miller  <davem@davemloft.net>

	* math/Makefile: Recognize gmp-sysdep_routines.
	* sysdeps/sparc/sparc64/multiarch/Makefile: Add VIS3 optimized GMP routines
	to sysdeps.
	* sysdeps/sparc/sparc64/multiarch/add_n-vis3.S: New file.
	* sysdeps/sparc/sparc64/multiarch/add_n.S: New file.
	* sysdeps/sparc/sparc64/multiarch/addmul_1-vis3.S: New file.
	* sysdeps/sparc/sparc64/multiarch/addmul_1.S: New file.
	* sysdeps/sparc/sparc64/multiarch/mul_1-vis3.S: New file.
	* sysdeps/sparc/sparc64/multiarch/mul_1.S: New file.
	* sysdeps/sparc/sparc64/multiarch/sub_n-vis3.S: New file.
	* sysdeps/sparc/sparc64/multiarch/sub_n.S: New file.
	* sysdeps/sparc/sparc64/multiarch/submul_1-vis3.S: New file.
	* sysdeps/sparc/sparc64/multiarch/submul_1.S: New file.

	* sysdeps/sparc/sparc32/sparcv9/mul_1.S: Properly optimize for 32-bit
	sparc V9 rather than using V8 code.
	* sysdeps/sparc/sparc32/sparcv9/addmul_1.S: Likewise.
	* sysdeps/sparc/sparc32/sparcv9/submul_1.S: Likewise.

	* sysdeps/sparc/sparc32/sparcv9/fpu/unix/sysv/linux/multiarch/Implies:
	Move to...
	* sysdeps/unix/sysv/linux/sparc/sparc32/sparcv9/fpu/multiarch/Implies:
	Here.

2013-01-11  Roland McGrath  <roland@hack.frob.com>

	* configure.in (sysnames): Use $multi_arch_d in setting up $mach list,
	not in the main loop.
	* configure: Regenerated.

2013-01-11  Joseph Myers  <joseph@codesourcery.com>

	* include/features.h (__GLIBC_HAVE_LONG_LONG): Remove.
	* bits/byteswap.h [__GLIBC_HAVE_LONG_LONG]: Change #elif condition
	to just #else.
	* bits/types.h [__GLIBC_HAVE_LONG_LONG]: Likewise.  Remove
	[!__GLIBC_HAVE_LONG_LONG] case.